--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,32 @@
-@(message: String)
-
-@main("Welcome to Play 2.0") {
-    
-    @play20.welcome(message, style = "Java")
-    
+@(contacts: List[models.Contact])
+<style type="text/css">
+table, th, td
+{
+    border: 1px solid black;
 }
+</style>
+<a href="/contacts/new">create new</a>
+<table>
+<thead>
+    <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Phone</th>
+        <th>Address</th>
+        <th>Zipcode</th>
+        <th>Edit</th>
+    </tr>
+</thead>
+<tbody>
+@for(c <- contacts) {
+  <tr>
+    <td>@c.getFirstName()</td>
+    <td>@c.getLastName()</td>
+    <td>@c.getPhone()</td>
+    <td>@c.getAddress()</td>
+    <td>@c.getZip()</td>
+    <td><a href="/contacts/@c.getZip()/@c.getId()">edit</a></td>
+  </tr>
+} 
+</tbody>
+</table>
